Fixed some issues and updated the tests